Extract Entity superclass for obstacles and powerups